tweaks to colours

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -12,7 +12,7 @@ $spacing-unit:     30px !default;
 
 $text-color:       #392c59 !default;
 $background-color: #eee0e0 !default;
-$brand-color:      #2a7ae2 !default;
+$brand-color:      #291c49 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
