--- a/assets/main.css
+++ b/assets/main.css
@@ -232,7 +232,7 @@ table td {
   float: left;
 }
 .site-title, .site-title:visited {
-  color: rgb(66.25, 66.25, 66.25);
+  color: #291c49;
 }
 
 .site-nav {
