--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,11 +288,11 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  color: #2a7ae2;
+  color: #291c49;
   text-decoration: none;
 }
 a:visited {
-  color: #1756a9;
+  color: #291c49;
 }
 a:hover {
   color: #111111;
