helps if you save the css before committing!  rename event posts to markdown so they compile.

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -121,7 +121,7 @@
   margin-left: 0;
 }
 
-.footer-col-wrapper {
+.footer-col-wrapper a {
   @include relative-font-size(0.9375);
   color: $grey-color;
   margin-left: -$spacing-unit * 0.5;
