--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -107,7 +107,7 @@
  */
 .site-footer {
   border-top: 1px solid $grey-color-light;
-  background-color: #fea0a0;
+  background-color: #fdb4b4;
   padding: $spacing-unit 0;
 }
 
