--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -10,9 +10,9 @@ exclude: true
   <img src="{{ imageUrl }}" style="max-height: 400px" alt="An image of the artwork {{page.ArtName}} by {{page.Artist}}"/>
 --}
 
-  <p><b>Date: </b>{{page.Date | date: date_format }}</p>
-  <p><b>Time: </b>{{page.Time}}</p>
-  <p><b>Event: </b>{{page.Event}}</p>
-  <p>{{page.Details}}</p>
+  <p><b>Event: </b>xx{{ page.Event }}xx</p>
+  <p><b>Date: </b>{{ page.Date | date: date_format }}</p>
+  <p><b>Time: </b>{{ page.Time }}</p>
+  <p>{{ page.Details }}</p>
     
 </article>
