change background colour to match new logo but keep header colour the same

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -11,7 +11,7 @@ $base-line-height: 1.5 !default;
 $spacing-unit:     30px !default;
 
 $text-color:       #392c59 !default;
-$background-color: #eee0e0 !default;
+$background-color: #f2efe6 !default;
 $brand-color:      #291c49 !default;
 
 $grey-color:       #828282 !default;
