--- a/assets/main.css
+++ b/assets/main.css
@@ -14,11 +14,11 @@ dl, dd, ol, ul, figure {
 body {
   font: 400 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #392c59;
-  background-color: #eee0e0;
+  background-color: #f2efe6;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
   -moz-font-feature-settings: "kern" 1;
-  -o-font-feature-settings: "kern" 1;
+  -o-font-feature-settings: "kern" 1;Ffoot
   font-feature-settings: "kern" 1;
   font-kerning: normal;
   display: flex;
@@ -217,6 +217,7 @@ table td {
   border-top: 5px solid rgb(66.25, 66.25, 66.25);
   border-bottom: 1px solid #e8e8e8;
   min-height: 55.95px;
+  background-color: #eee0e0;
   position: relative;
 }
 
@@ -319,6 +320,7 @@ table td {
 .footer-col-wrapper {
   font-size: 15px;
   color: #222222;
+  background-color: #eee0e0;
   margin-left: -15px;
 }
 
