--- a/assets/main.css
+++ b/assets/main.css
@@ -14,7 +14,7 @@ dl, dd, ol, ul, figure {
 body {
   font: 400 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #392c59;
-  background-color: #f2efe6;
+  background-color: #f0ede2;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
   -moz-font-feature-settings: "kern" 1;
@@ -302,6 +302,7 @@ table td {
  */
 .site-footer {
   border-top: 1px solid #e8e8e8;
+  background-color: #eee0e0;
   padding: 30px 0;
 }
 
@@ -319,7 +320,6 @@ table td {
 .footer-col-wrapper {
   font-size: 15px;
   color: #222222;
-  background-color: #eee0e0;
   margin-left: -15px;
 }
 
