--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,10 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}"><img src=" {{ "/" | base_url | "images/bhc-mini.png">{{ site.title | escape }}</a>
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+      <img src="{{ "/" | base_url | append: "images/bhc-mini.png" }}" alt="BHC logo featuring stylized initials BHC in blue on a white background, conveying a professional and welcoming tone" />
+      {{ site.title | escape }}
+    </a>
    
     {%- if page_paths -%}
       <nav class="site-nav">
