--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
-      <img src="{{ "/" | base_url | append: "images/bhc-mini.png" }}" alt="BHC logo" /> [base_url]
+      <img src="{{ "/" | base_url | append: "images/bhc-mini.png" }}" alt="BHC logo" /> 
       {{ site.title | escape }}
     </a>
    
@@ -18,6 +18,9 @@
             </svg>
           </span>
         </label>
+
+        <p>Just checking - [ {{ base_url }} ]</p>
+        <p> [ {{ base_url | append: "filename" }}</p>
 
         <div class="trigger">
           {%- for path in page_paths -%}
