still not working - add more checks

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,9 @@
         </label>
 
         <p>Just checking - [ {{ base_url }} ]</p>
-        <p> [ {{ base_url | append: "filename" }}</p>
+        <p> [ {{ base_url | append: "filename" }} ]</p>
+        <p> [ {{ relative_url | append: "filename" }} ]</p>
+        <p> [ {{ site.title | escape }} ]</p>
 
         <div class="trigger">
           {%- for path in page_paths -%}
