logo back on root pages, but not posts

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
 
         <p>Just checking - [ {{ base_url }} ]</p>
         <p> [ {{ base_url | append: "filename" }} ]</p>
-        <p> [ {{ relative_url | append: "filename" }} ]</p>
+        <p> [ "{{ relative_url | append: "filename" }}" ]</p>
         <p> [ {{ site.title | escape }} ]</p>
 
         <div class="trigger">
