--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
-      <img src="{{ site.relative_url | append: "images/bhc-mini.png" }}" alt="BHC logo" /> 
+      <img src="{{ site.baseurl | append: "images/bhc-mini.png" }}" alt="BHC logo" /> 
       {{ site.title | escape }}
     </a>
    
@@ -18,11 +18,6 @@
             </svg>
           </span>
         </label>
-
-        <p>Just checking - [ {{ base_url }} ]</p>
-        <p> [ {{ site.baseurl | append: "filename" }} ]</p>
-        <p> [ {{ site.relativeurl | append: "filename" }} ]</p>
-        <p> [ {{ site.title | escape }} ]</p>
 
         <div class="trigger">
           {%- for path in page_paths -%}
